# augur

./: .gitignore  README.md  pyproject.toml
docs/: qwen2_5_0_5b_architecture.md
scripts/: bench_generate.py  benchmark.py  download_weights.py  run_prompt.py
src/augur/: attention.py  benchmarking.py  block.py  cli.py  config.py  generation.py  kv_cache.py  mlp.py  model.py  paged_kv_cache.py  prefix_cache.py  rms_norm.py  rope.py  sampling.py  scheduler.py  server.py  text.py  tokenizer.py  weights.py
tests/: test_attention.py  test_benchmarking.py  test_block.py  test_cli.py  test_generation.py  test_kv_cache.py  test_mlp.py  test_model.py  test_paged_kv_cache.py  test_prefix_cache.py  test_rms_norm.py  test_rope.py  test_run_prompt.py  test_sampling.py  test_scheduler.py  test_tokenizer.py
