[project]
name = "augur"
version = "0.1.0"
description = "Qwen inference engine, written from scratch in PyTorch then Triton."
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5",
    "regex>=2024.0",
    "safetensors>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "transformers>=4.40",
    "ruff>=0.7",
]

[project.scripts]
augur = "augur.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/augur"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
